--- a/Credit_scoring_ByteBank.ipynb
+++ b/Credit_scoring_ByteBank.ipynb
@@ -3800,11 +3800,10 @@
    "id": "27e4b04b-ca8d-4767-a26a-7fecf24d9cda",
    "metadata": {},
    "source": [
-    "### Análise e Escolha do Melhor Modelo para Concessão de Crédito no ByteBank\r\n",
+    "# Análise e Escolha do Melhor Modelo para Concessão de Crédito no ByteBank\r\n",
     "\r\n",
-    "Agora que já produzimos os nossos primeiros modelos e já sabemos quais são as métricas estatísticas resultantes, é crucial determinar qual modelo se adapta melhor às necessidades do **ByteBank**. A seguir, vamos analisar os resultados de cada um dos modelos desenvolvidos.\r",
-    "#\n",
-    "#\r\n",
+    "Agora que já produzimos os nossos primeiros modelos e já sabemos quais são as métricas estatísticas resultantes, é crucial determinar qual modelo se adapta melhor às necessidades do **ByteBank**. A seguir, vamos analisar os resultados de cada um dos modelos desenvolvidos.\r\n",
+    "\r\n",
     "## 1. Regressão de Teste\r\n",
     "\r\n",
     "- **Categoria 1**:\r\n",
@@ -3821,7 +3820,7 @@
     "| Recall        | 0.94 | 0.48 |          | 0.71      | 0.81         |\r\n",
     "| F1-score      | 0.87 | 0.59 |          | 0.73      | 0.79         |\r\n",
     "| Support       | 214  | 86   | 300      | 300       | 300          |\r\n",
-    "| ROC AUC       | 0##.8194 (aprox.) |\r\n",
+    "| ROC AUC       | 0.8194 (aprox.) |\r\n",
     "\r\n",
     "\r\n",
     "## 2. Regressão Sem Variáveis \"Sexo\" e \"Sexo_Est_Civil\"\r\n",
@@ -3839,7 +3838,7 @@
     "| Precision     | 0.82 | 0.77 | 0.81     | 0.80      | 0.81         |\r\n",
     "| Recall        | 0.94 | 0.48 |          | 0.71      | 0.81         |\r\n",
     "| F1-score      | 0.88 | 0.59 |          | 0.73      | 0.79         |\r\n",
-    "| Support       | 214  | 86   | 300      | 300       | 300     ##     |\r\n",
+    "| Support       | 214  | 86   | 300      | 300       | 300          |\r\n",
     "| ROC AUC       | 0.8103 |\r\n",
     "\r\n",
     "\r\n",
@@ -3858,7 +3857,7 @@
     "| Precision     | 0.81 | 0.68 | 0.78     | 0.75      | 0.77         |\r\n",
     "| Recall        | 0.92 | 0.45 |          | 0.68      | 0.78         |\r\n",
     "| F1-score      | 0.86 | 0.55 |          | 0.70      | 0.77         |\r\n",
-    "| Support       | 214  | 86   | 300      | 3##00       | 300          |\r\n",
+    "| Support       | 214  | 86   | 300      | 300       | 300          |\r\n",
     "| ROC AUC       | 0.7991 |\r\n",
     "\r\n",
     "\r\n",
@@ -3868,7 +3867,8 @@
     "\r\n",
     "A escolha do modelo final depende do **apetite de risco do ByteBank**. Como se trata de uma instituição **conservadora**, pode ser adequado optar pelo último modelo, que oferece um **bom equilíbrio** entre precisão e recall. Embora tenha perdido um pouco de precisão, ele compensa com um ganho em recall, algo que pode ser desejável num cenário de menor risco.\r\n",
     "\r\n",
-    "Por fim, vale a pena salientar que podem ser realizados mais testes e ajustamentos, como a inclusão ou exclusão de variáveis, para melhorar ainda mais o modelo. A escolha do modelo é um processo que envolve **trade-offs**, e não há uma resposta única, mas o modelo escolhido até agora é este.\r\n"
+    "Por fim, vale a pena salientar que podem ser realizados mais testes e ajustamentos, como a inclusão ou exclusão de variáveis, para melhorar ainda mais o modelo. A escolha do modelo é um processo que envolve **trade-offs**, e não há uma resposta única, mas o modelo escolhido até agora é este.\r\n",
+    "ão há uma resposta única, mas o modelo escolhido até agora é este.\r\n"
    ]
   },
   {
