--- a/Credit_scoring_ByteBank.ipynb
+++ b/Credit_scoring_ByteBank.ipynb
@@ -3813,7 +3813,8 @@
     "  - **Eventos**: 86\r\n",
     "  - **Área sob a curva ROC**: 0.8194 (aproximadamente 0.82)\r\n",
     "\r\n",
-    "**Resumo das métricas**:\r\n",
+    "**Resumo da\n",
+    "s métricas**:\r\n",
     "| Métrica       | 0    | 1    | Accuracy | Macro Avg | Weighted Avg |\r\n",
     "|---------------|------|------|----------|-----------|--------------|\r\n",
     "| Precision     | 0.82 | 0.76 | 0.81     | 0.79      | 0.80         |\r\n",
@@ -3830,7 +3831,8 @@
     "  - **Recall**: 48%\r\n",
     "  - **F1-score**: 59%\r\n",
     "  - **Eventos**: 86\r\n",
-    "  - **Área sob a curva ROC**: 0.810 (um pouco mais baixa que a anterior)\r\n",
+    "  - **Área sob a curva ROC**: 0.810 (um pouco mais baixa que a anter\n",
+    "ior)\r\n",
     "\r\n",
     "**Resumo das métricas**:\r\n",
     "| Métrica       | 0    | 1    | Accuracy | Macro Avg | Weighted Avg |\r\n",
@@ -3849,7 +3851,9 @@
     "  - **Recall**: 45%\r\n",
     "  - **F1-score**: 55%\r\n",
     "  - **Eventos**: 86\r\n",
-    "  - **Área sob a curva ROC**: 0.799\r\n",
+    "  - **Área s\n",
+    "\n",
+    "ob a curva ROC**: 0.799\r\n",
     "\r\n",
     "**Resumo das métricas**:\r\n",
     "| Métrica       | 0    | 1    | Accuracy | Macro Avg | Weighted Avg |\r\n",
