--- a/Credit_scoring_ByteBank.ipynb
+++ b/Credit_scoring_ByteBank.ipynb
@@ -3735,7 +3735,9 @@
    "cell_type": "code",
    "execution_count": 299,
    "id": "9b1c1529-6a33-4627-ae95-5d0bf92e4f55",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3800,78 +3802,70 @@
    "id": "27e4b04b-ca8d-4767-a26a-7fecf24d9cda",
    "metadata": {},
    "source": [
-    "# Análise e Escolha do Melhor Modelo para Concessão de Crédito no ByteBank\r\n",
+    "Agora que produzimos nossos primeiros modelos e conhecemos as métricas estatísticas resultantes, é crucial determinar qual modelo melhor atende às necessidades do ByteBank. A seguir, analisaremos os resultados de cada um dos modelos desenvolvidos.\r\n",
     "\r\n",
-    "Agora que já produzimos os nossos primeiros modelos e já sabemos quais são as métricas estatísticas resultantes, é crucial determinar qual modelo se adapta melhor às necessidades do **ByteBank**. A seguir, vamos analisar os resultados de cada um dos modelos desenvolvidos.\r\n",
+    "1. **Teste de Regressão - Categoria 1:**\r\n",
     "\r\n",
-    "## 1. Regressão de Teste\r\n",
+    "   - Precisão: 76%\r\n",
+    "   - Recall: 48%\r\n",
+    "   - F1-score: 59%\r\n",
+    "   - Eventos: 86\r\n",
+    "   - Área sob a curva ROC: 0.8194 (aproximadamente 0.82)\r\n",
     "\r\n",
-    "- **Categoria 1**:\r\n",
-    "  - **Precisão**: 76%\r\n",
-    "  - **Recall**: 48%\r\n",
-    "  - **F1-score**: 59%\r\n",
-    "  - **Eventos**: 86\r\n",
-    "  - **Área sob a curva ROC**: 0.8194 (aproximadamente 0.82)\r\n",
+    "   **Resumo das métricas:**\r\n",
     "\r\n",
-    "**Resumo da\n",
-    "s métricas**:\r\n",
-    "| Métrica       | 0    | 1    | Accuracy | Macro Avg | Weighted Avg |\r\n",
-    "|---------------|------|------|----------|-----------|--------------|\r\n",
-    "| Precision     | 0.82 | 0.76 | 0.81     | 0.79      | 0.80         |\r\n",
-    "| Recall        | 0.94 | 0.48 |          | 0.71      | 0.81         |\r\n",
-    "| F1-score      | 0.87 | 0.59 |          | 0.73      | 0.79         |\r\n",
-    "| Support       | 214  | 86   | 300      | 300       | 300          |\r\n",
-    "| ROC AUC       | 0.8194 (aprox.) |\r\n",
+    "   | Métrica   | 0    | 1    | Acurácia | Média Macro | Média Ponderada |\r\n",
+    "   |-----------|------|------|----------|-------------|-----------------|\r\n",
+    "   | Precisão  | 0.82 | 0.76 | 0.81     | 0.79        | 0.80            |\r\n",
+    "   | Recall    | 0.94 | 0.48 |          | 0.71        | 0.81            |\r\n",
+    "   | F1-score  | 0.87 | 0.59 |          | 0.73        | 0.79            |\r\n",
+    "   | Suporte   | 214  | 86   | 300      | 300         | 300             |\r\n",
+    "   | ROC AUC   | 0.8194 (aproximado)    |\r\n",
     "\r\n",
+    "2. **Regressão sem as variáveis \"Sexo\" e \"Sexo_Estado_Civil\" - Categoria 1:**\r\n",
     "\r\n",
-    "## 2. Regressão Sem Variáveis \"Sexo\" e \"Sexo_Est_Civil\"\r\n",
+    "   - Precisão: 77%\r\n",
+    "   - Recall: 48%\r\n",
+    "   - F1-score: 59%\r\n",
+    "   - Eventos: 86\r\n",
+    "   - Área sob a curva ROC: 0.810 (um pouco mais baixa que a anterior)\r\n",
     "\r\n",
-    "- **Categoria 1**:\r\n",
-    "  - **Precisão**: 77%\r\n",
-    "  - **Recall**: 48%\r\n",
-    "  - **F1-score**: 59%\r\n",
-    "  - **Eventos**: 86\r\n",
-    "  - **Área sob a curva ROC**: 0.810 (um pouco mais baixa que a anter\n",
-    "ior)\r\n",
+    "   **Resumo das métricas:**\r\n",
     "\r\n",
-    "**Resumo das métricas**:\r\n",
-    "| Métrica       | 0    | 1    | Accuracy | Macro Avg | Weighted Avg |\r\n",
-    "|---------------|------|------|----------|-----------|--------------|\r\n",
-    "| Precision     | 0.82 | 0.77 | 0.81     | 0.80      | 0.81         |\r\n",
-    "| Recall        | 0.94 | 0.48 |          | 0.71      | 0.81         |\r\n",
-    "| F1-score      | 0.88 | 0.59 |          | 0.73      | 0.79         |\r\n",
-    "| Support       | 214  | 86   | 300      | 300       | 300          |\r\n",
-    "| ROC AUC       | 0.8103 |\r\n",
+    "   | Métrica   | 0    | 1    | Acurácia | Média Macro | Média Ponderada |\r\n",
+    "   |-----------|------|------|----------|-------------|-----------------|\r\n",
+    "   | Precisão  | 0.82 | 0.77 | 0.81     | 0.80        | 0.81            |\r\n",
+    "   | Recall    | 0.94 | 0.48 |          | 0.71        | 0.81            |\r\n",
+    "   | F1-score  | 0.88 | 0.59 |          | 0.73        | 0.79            |\r\n",
+    "   | Suporte   | 214  | 86   | 300      | 300         | 300             |\r\n",
+    "   | ROC AUC   | 0.8103 |\r\n",
     "\r\n",
+    "3. **Regressão sem as variáveis \"Sexo\", \"Estado_Civil_Sexo\" e variáveis absolutas - Categoria 1:**\r\n",
     "\r\n",
-    "## 3. Regressão Sem Variáveis \"Sexo\", \"Sexo_Est_Civil\" e Variáveis Absolutas\r\n",
+    "   - Precisão: 68%\r\n",
+    "   - Recall: 45%\r\n",
+    "   - F1-score: 55%\r\n",
+    "   - Eventos: 86\r\n",
+    "   - Área sob a curva ROC: 0.799\r\n",
     "\r\n",
-    "- **Categoria 1**:\r\n",
-    "  - **Precisão**: 68%\r\n",
-    "  - **Recall**: 45%\r\n",
-    "  - **F1-score**: 55%\r\n",
-    "  - **Eventos**: 86\r\n",
-    "  - **Área s\n",
-    "\n",
-    "ob a curva ROC**: 0.799\r\n",
+    "   **Resumo das métricas:**\r\n",
     "\r\n",
-    "**Resumo das métricas**:\r\n",
-    "| Métrica       | 0    | 1    | Accuracy | Macro Avg | Weighted Avg |\r\n",
-    "|---------------|------|------|----------|-----------|--------------|\r\n",
-    "| Precision     | 0.81 | 0.68 | 0.78     | 0.75      | 0.77         |\r\n",
-    "| Recall        | 0.92 | 0.45 |          | 0.68      | 0.78         |\r\n",
-    "| F1-score      | 0.86 | 0.55 |          | 0.70      | 0.77         |\r\n",
-    "| Support       | 214  | 86   | 300      | 300       | 300          |\r\n",
-    "| ROC AUC       | 0.7991 |\r\n",
+    "   | Métrica   | 0    | 1    | Acurácia | Média Macro | Média Ponderada |\r\n",
+    "   |-----------|------|------|----------|-------------|-----------------|\r\n",
+    "   | Precisão  | 0.81 | 0.68 | 0.78     | 0.75        | 0.77            |\r\n",
+    "   | Recall    | 0.92 | 0.45 |          | 0.68        | 0.78            |\r\n",
+    "   | F1-score  | 0.86 | 0.55 |          | 0.70        | 0.77            |\r\n",
+    "   | Suporte   | 214  | 86   | 300      | 300         | 300             |\r\n",
+    "   | ROC AUC   | 0.7991 |\r\n",
     "\r\n",
+    "**Conclusão**\r\n",
     "\r\n",
-    "## Conclusão\r\n",
+    "Em termos de precisão e recall, o segundo modelo parece ser o mais equilibrado. Ele mantém o recall e o f1-score enquanto melhora ligeiramente a precisão, embora a área sob a curva ROC tenha sofrido uma pequena queda.\r\n",
     "\r\n",
-    "Em termos de precisão e recall, o segundo modelo parece ser o mais equilibrado. Ele mantém o **recall** e o **f1-score** enquanto melhora ligeiramente a **precisão**, embora a área sob a curva ROC tenha sofrido uma pequena queda.\r\n",
+    "A escolha final do modelo depende do apetite de risco do ByteBank. Como uma instituição conservadora, pode ser apropriado optar pelo último modelo, que oferece um bom equilíbrio entre precisão e recall. Embora tenha perdido alguma precisão, compensa com um ganho em recall, o que pode ser desejável em um cenário de menor risco.\r\n",
     "\r\n",
-    "A escolha do modelo final depende do **apetite de risco do ByteBank**. Como se trata de uma instituição **conservadora**, pode ser adequado optar pelo último modelo, que oferece um **bom equilíbrio** entre precisão e recall. Embora tenha perdido um pouco de precisão, ele compensa com um ganho em recall, algo que pode ser desejável num cenário de menor risco.\r\n",
+    "Finalmente, vale ressaltar que mais testes e ajustes, como a inclusão ou remoção de variáveis, podem ser realizados para melhorar ainda mais o modelo. A seleção do modelo é um processo que envolve trade-offs, e não há uma única resposta, mas o modelo escolhido até agora é este.\r\n",
     "\r\n",
-    "Por fim, vale a pena salientar que podem ser realizados mais testes e ajustamentos, como a inclusão ou exclusão de variáveis, para melhorar ainda mais o modelo. A escolha do modelo é um processo que envolve **trade-offs**, e não há uma resposta única, mas o modelo escolhido até agora é este.\r\n",
     "ão há uma resposta única, mas o modelo escolhido até agora é este.\r\n"
    ]
   },
