--- a/Credit_scoring_ByteBank.ipynb
+++ b/Credit_scoring_ByteBank.ipynb
@@ -3802,69 +3802,70 @@
    "id": "27e4b04b-ca8d-4767-a26a-7fecf24d9cda",
    "metadata": {},
    "source": [
-    "Agora que produzimos nossos primeiros modelos e conhecemos as métricas estatísticas resultantes, é crucial determinar qual modelo melhor atende às necessidades do ByteBank. A seguir, analisaremos os resultados de cada um dos modelos desenvolvidos.\n",
-    "\n",
-    "1. **Teste de Regressão - Categoria 1:**\n",
-    "\n",
-    "   - Precisão: 76%\n",
-    "   - Recall: 48%\n",
-    "   - F1-score: 59%\n",
-    "   - Eventos: 86\n",
-    "   - Área sob a curva ROC: 0.8194 (aproximadamente 0.82)\n",
-    "\n",
-    "   **Resumo das métricas:**\n",
-    "\n",
-    "   | Métrica   | 0    | 1    | Acurácia | Média Macro | Média Ponderada |\n",
-    "   |-----------|------|------|----------|-------------|-----------------|\n",
-    "   | Precisão  | 0.82 | 0.76 | 0.81     | 0.79        | 0.80            |\n",
-    "   | Recall    | 0.94 | 0.48 |          | 0.71        | 0.81            |\n",
-    "   | F1-score  | 0.87 | 0.59 |          | 0.73        | 0.79            |\n",
-    "   | Suporte   | 214  | 86   | 300      | 300         | 300             |\n",
-    "   | ROC AUC   | 0.8194 (aproximado)    |\n",
-    "\n",
-    "2. **Regressão sem as variáveis \"Sexo\" e \"Sexo_Estado_Civil\" - Categoria 1:**\n",
-    "\n",
-    "   - Precisão: 77%\n",
-    "   - Recall: 48%\n",
-    "   - F1-score: 59%\n",
-    "   - Eventos: 86\n",
-    "   - Área sob a curva ROC: 0.810 (um pouco mais baixa que a anterior)\n",
-    "\n",
-    "   **Resumo das métricas:**\n",
-    "\n",
-    "   | Métrica   | 0    | 1    | Acurácia | Média Macro | Média Ponderada |\n",
-    "   |-----------|------|------|----------|-------------|-----------------|\n",
-    "   | Precisão  | 0.82 | 0.77 | 0.81     | 0.80        | 0.81            |\n",
-    "   | Recall    | 0.94 | 0.48 |          | 0.71        | 0.81            |\n",
-    "   | F1-score  | 0.88 | 0.59 |          | 0.73        | 0.79            |\n",
-    "   | Suporte   | 214  | 86   | 300      | 300         | 300             |\n",
-    "   | ROC AUC   | 0.8103 |\n",
-    "\n",
-    "3. **Regressão sem as variáveis \"Sexo\", \"Estado_Civil_Sexo\" e variáveis absolutas - Categoria 1:**\n",
-    "\n",
-    "   - Precisão: 68%\n",
-    "   - Recall: 45%\n",
-    "   - F1-score: 55%\n",
-    "   - Eventos: 86\n",
-    "   - Área sob a curva ROC: 0.799\n",
-    "\n",
-    "   **Resumo das métricas:**\n",
-    "\n",
-    "   | Métrica   | 0    | 1    | Acurácia | Média Macro | Média Ponderada |\n",
-    "   |-----------|------|------|----------|-------------|-----------------|\n",
-    "   | Precisão  | 0.81 | 0.68 | 0.78     | 0.75        | 0.77            |\n",
-    "   | Recall    | 0.92 | 0.45 |          | 0.68        | 0.78            |\n",
-    "   | F1-score  | 0.86 | 0.55 |          | 0.70        | 0.77            |\n",
-    "   | Suporte   | 214  | 86   | 300      | 300         | 300             |\n",
-    "   | ROC AUC   | 0.7991 |\n",
-    "\n",
-    "**Conclusão**\n",
-    "\n",
-    "Em termos de precisão e recall, o segundo modelo parece ser o mais equilibrado. Ele mantém o recall e o f1-score enquanto melhora ligeiramente a precisão, embora a área sob a curva ROC tenha sofrido uma pequena queda.\n",
-    "\n",
-    "A escolha final do modelo depende do apetite de risco do ByteBank. Como uma instituição conservadora, pode ser apropriado optar pelo último modelo, que oferece um bom equilíbrio entre precisão e recall. Embora tenha perdido alguma precisão, compensa com um ganho em recall, o que pode ser desejável em um cenário de menor risco.\n",
-    "\n",
-    "Finalmente, vale ressaltar que mais testes e ajustes, como a inclusão ou remoção de variáveis, podem ser realizados para melhorar ainda mais o modelo. A seleção do modelo é um processo que envolve trade-offs, e não há uma única resposta, mas o modelo escolhido até agora é este.á uma única resposta, mas o modelo escolhido até agora é este.\r\n",
+    "Agora que produzimos nossos primeiros modelos e conhecemos as métricas estatísticas resultantes, é crucial determinar qual modelo melhor atende às necessidades do ByteBank. A seguir, analisaremos os resultados de cada um dos modelos desenvolvidos.\r\n",
+    "\r\n",
+    "1. **Teste de Regressão - Categoria 1:**\r\n",
+    "\r\n",
+    "   - Precisão: 76%\r\n",
+    "   - Recall: 48%\r\n",
+    "   - F1-score: 59%\r\n",
+    "   - Eventos: 86\r\n",
+    "   - Área sob a curva ROC: 0.8194 (aproximadamente 0.82)\r\n",
+    "\r\n",
+    "   **Resumo das métricas:**\r\n",
+    "\r\n",
+    "   | Métrica   | 0    | 1    | Acurácia | Média Macro | Média Ponderada |\r\n",
+    "   |-----------|------|------|----------|-------------|-----------------|\r\n",
+    "   | Precisão  | 0.82 | 0.76 | 0.81     | 0.79        | 0.80            |\r\n",
+    "   | Recall    | 0.94 | 0.48 |          | 0.71        | 0.81            |\r\n",
+    "   | F1-score  | 0.87 | 0.59 |          | 0.73        | 0.79            |\r\n",
+    "   | Suporte   | 214  | 86   | 300      | 300         | 300             |\r\n",
+    "   | ROC AUC   | 0.8194 (aproximado)    |\r\n",
+    "\r\n",
+    "2. **Regressão sem as variáveis \"Sexo\" e \"Sexo_Estado_Civil\" - Categoria 1:**\r\n",
+    "\r\n",
+    "   - Precisão: 77%\r\n",
+    "   - Recall: 48%\r\n",
+    "   - F1-score: 59%\r\n",
+    "   - Eventos: 86\r\n",
+    "   - Área sob a curva ROC: 0.810 (um pouco mais baixa que a anterior)\r\n",
+    "\r\n",
+    "   **Resumo das métricas:**\r\n",
+    "\r\n",
+    "   | Métrica   | 0    | 1    | Acurácia | Média Macro | Média Ponderada |\r\n",
+    "   |-----------|------|------|----------|-------------|-----------------|\r\n",
+    "   | Precisão  | 0.82 | 0.77 | 0.81     | 0.80        | 0.81            |\r\n",
+    "   | Recall    | 0.94 | 0.48 |          | 0.71        | 0.81            |\r\n",
+    "   | F1-score  | 0.88 | 0.59 |          | 0.73        | 0.79            |\r\n",
+    "   | Suporte   | 214  | 86   | 300      | 300         | 300             |\r\n",
+    "   | ROC AUC   | 0.8103 |\r\n",
+    "\r\n",
+    "3. **Regressão sem as variáveis \"Sexo\", \"Estado_Civil_Sexo\" e variáveis absolutas - Categoria 1:**\r\n",
+    "\r\n",
+    "   - Precisão: 68%\r\n",
+    "   - Recall: 45%\r\n",
+    "   - F1-score: 55%\r\n",
+    "   - Eventos: 86\r\n",
+    "   - Área sob a curva ROC: 0.799\r\n",
+    "\r\n",
+    "   **Resumo das métricas:**\r\n",
+    "\r\n",
+    "   | Métrica   | 0    | 1    | Acurácia | Média Macro | Média Ponderada |\r\n",
+    "   |-----------|------|------|----------|-------------|-----------------|\r\n",
+    "   | Precisão  | 0.81 | 0.68 | 0.78     | 0.75        | 0.77            |\r\n",
+    "   | Recall    | 0.92 | 0.45 |          | 0.68        | 0.78            |\r\n",
+    "   | F1-score  | 0.86 | 0.55 |          | 0.70        | 0.77            |\r\n",
+    "   | Suporte   | 214  | 86   | 300      | 300         | 300             |\r\n",
+    "   | ROC AUC   | 0.7991 |\r\n",
+    "\r\n",
+    "**Conclusão**\r\n",
+    "\r\n",
+    "Em termos de precisão e recall, o segundo modelo parece ser o mais equilibrado. Ele mantém o recall e o F1-score enquanto melhora ligeiramente a precisão, embora a área sob a curva ROC tenha sofrido uma pequena queda.\r\n",
+    "\r\n",
+    "A escolha final do modelo depende do apetite de risco do ByteBank. Como uma instituição conservadora, pode ser apropriado optar pelo último modelo, que oferece um bom equilíbrio entre precisão e recall. Embora tenha perdido alguma precisão, compensa com um ganho em recall, o que pode ser desejável em um cenário de menor risco.\r\n",
+    "\r\n",
+    "Finalmente, vale ressaltar que mais testes e ajustes, como a inclusão ou remoção de variáveis, podem ser realizados para melhorar ainda mais o modelo. A seleção do modelo é um processo que envolve trade-offs, e não há uma única resposta, mas o modelo escolhido até agora é este.\r\n",
+    "á uma única resposta, mas o modelo escolhido até agora é este.\r\n",
     "\r\n",
     "ão há uma resposta única, mas o modelo escolhido até agora é este.\r\n"
    ]
